# microservice

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  router.py
