[tool.poetry]
name = "Service 1"
version = "0.1.0"
description = ""
authors = ["Nam Mai"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"

[tool.poetry.group.forcontainer.dependencies]
pysqlite3-binary = "0.5.2.post3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
